# competition2023

./: .gitignore  dif.csv  gencsv.sh  predict.sh  pyproject.toml  shanai.csv  toyota_cars  train.py
