[tool.poetry]
name = "competition2023"
version = "0.1.0"
description = ""
authors = ["noganogami <hydetkc7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mypy = "^1.1.1"
torch = { url = "https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp39-cp39-linux_x86_64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu116/torchvision-0.14.1%2Bcu116-cp39-cp39-linux_x86_64.whl"}
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
jupyterlab = "^4.0.6"
timm = "^0.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
ignore_missing_imports = true
